--- a/.ado/pipelines/config/variables-values-e2e.yaml
+++ b/.ado/pipelines/config/variables-values-e2e.yaml
@@ -4,14 +4,14 @@ variables:
 
 # Resource prefix for this environment
 - name:  'prefix'
-  value: 'afe2e'          # <===== CHANGE THIS! Must not be longer than 6 characters! Needs to be a unique prefix
+  value: 'mye2e'          # <===== CHANGE THIS! Must not be longer than 6 characters! Needs to be a unique prefix
 
 # The first value in 'stampLocations' is the primary region used for global services.
 # IMPORTANT! Changing the primary region (first value) is a BREAKING change and will destroy CosmosDB and Front Door.
 # Check which regions are valid. There is a list in /src/infra/README.md
 # If you are planning to run Chaos Studio experiments, make sure the first region in the list does support Azure Chaos Studio. Not all regions do yet
 - name: 'stampLocations'
-  value: '["uksouth"]'
+  value: '["northeurope", "eastus2"]'
 
 # Terraform state variables
 - name:  'terraformResourceGroup'
@@ -21,4 +21,4 @@ variables:
 
 # Other settings
 - name:  'contactEmail'
-  value: 'noreply@microsoft.com'  # <===== CHANGE THIS VALUE TO ONE OF YOUR REAL EMAIL ADDRESSES (OR A GROUP)!
+  value: 'lamont_harrington@outlook.com'  # <===== CHANGE THIS VALUE TO ONE OF YOUR REAL EMAIL ADDRESSES (OR A GROUP)!
